Fixed miss-alignment with project titles

--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,7 @@
 }
 
 /* ---------Header----------- */
-/* RowLines: 3 & ColumnLines: 3; */
-.header {/*border: 1px solid red;*/
+.header {
     grid-area: 1/2/2/3;
     background-color: white;
     padding: 15px;
@@ -23,9 +22,17 @@
     align-items: center;
 }
 
+.searchbtn {
+    background-color: white;
+    outline: none;
+    border: none;
+}
+
 input[type='search']{
     background-color: #E2E8F0;
     border-radius: 20px;
+    height: 40px;
+    width: clamp(20%, 500px, 70%);
     border: none;
     outline: none;
 }
@@ -43,8 +50,8 @@ input[type='search']{
 
 .btns {
     display: flex;
-    justify-content: space-around;
-    gap: 30px;
+    justify-content: center;
+    gap: 50px;
 }
 
 .btns>button {
@@ -57,8 +64,6 @@ input[type='search']{
     font-weight: 700;
 }
 
-/* .header>div {border: 1px solid blue;} */
-
 /* ---------Side----------- */
 
 .sidebar {
@@ -66,7 +71,6 @@ input[type='search']{
     background-color: #1992D4;
     color: white;
     display: grid;
-    /* max-height: 1200px; */
     grid-template: 60px repeat(6, 25px) repeat(4, 25px) / 1fr 5fr;
     gap: 15px 15px;
     font-weight: 700;
@@ -78,7 +82,7 @@ input[type='search']{
 }
 
 /* ---------main----------- */
-.main { border: 1px solid yellow;
+.main {
     grid-area: 2/2/3/3;
     background-color: #E2E8F0;
     display: grid;
@@ -87,6 +91,7 @@ input[type='search']{
     gap: 30px;
 }
 
+/* ------------------------------- */
 .project {
     display: grid;
     grid-area: 1/1/3/2;
@@ -109,7 +114,7 @@ input[type='search']{
 }
 
 .innerTitle {
-    font-size: 1.4rem;
+    font-size: 2rem;
 }
 
 .inner {
@@ -144,10 +149,13 @@ input[type='search']{
 
 .announcements {
     grid-area: 1/2/2/2;
-    /* padding: 20px; */
+    display: grid;
+    grid-template: 40px 1fr / minmax(200px, 1fr);
+    gap: 30px;
+
 }
 
-.announceShell { border: 1px solid red;
+.announceShell {
     background-color: white;
     border-radius: 10px;
     padding: 30px;
